--- a/client/src/components/Employer/EmployerDashboard.css
+++ b/client/src/components/Employer/EmployerDashboard.css
@@ -873,6 +873,20 @@
   }
 }
 
+/* Messages container styling */
+.messages-container {
+  height: calc(100vh - 6rem);
+  padding: 1rem 0;
+}
+
+@media (max-width: 1024px) {
+  .messages-container {
+    margin: -1rem;
+    height: calc(100vh - 4rem);
+    padding: 0;
+  }
+}
+
 /* Add responsive styles */
 @media (min-width: 1441px) {
   /* Large desktop */
